# simple-state-rs

./: .gitignore  Cargo.toml  README.md  build.rs
ethtest-derive/: Cargo.toml
ethtest-derive/src/: lib.rs
ethtest-derive/tests/: main.rs
src/: SimpleState.sol
src/test/: NullContract.sol  SimpleState.t.sol
tests/: enum_version.rs  fns_only.rs  main.rs  old_gat.rs  scratch.rs  tests.rs  types.rs
tests/harness/: types.rs
tests/tests/: mod.rs  prestate.rs  state_0.rs  state_1.rs  utils.rs
