[package]
name = "simple-state"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "all"
path = "tests/main.rs"
harness = false

[dependencies]
linkme = "0.2"
futures = "0.3.15"
anyhow = "1.0.39"
tokio = { version = "1.5", default-features = false, features = ["macros", "rt-multi-thread"] }
once_cell = "1.8.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy", "dev-rpc"]}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
futures-executor = "0.3.18"
async-trait = "0.1.51"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
